# nokia-3310-emulator

./: .gitignore  Cargo.toml  README.md  RUN_3310.sh  RUN_MADOS.sh  RUN_STOCK.sh  bruteforce_simlock.py
crates/arm7tdmi/: Cargo.toml
crates/arm7tdmi/src/: exception.rs
crates/arm7tdmi/src/arm/: exec.rs
crates/arm7tdmi/src/gdb/: target.rs
crates/arm7tdmi/src/thumb/: exec.rs
crates/emucore/: Cargo.toml
crates/emucore/src/: buzzer.rs  ccont.rs  ctsi.rs  dsp.rs  emu.rs  flash.rs  keypad.rs  lcd.rs  lib.rs  loader.rs  machine.rs  mbus.rs  periph.rs  sim.rs
crates/nokia3310/: Cargo.toml
crates/nokia3310/src/: audio.rs  font.rs  lcd.rs  main.rs  ui.rs
docs/: bringup-notes.md
